# insight-engine

./: docker-compose.yml  load_balancer_test.py
backend/: Dockerfile  printer.py  pyproject.toml  seed_rbac.py
backend/alembic/: env.py
backend/alembic/versions/: 17373bef8a35_create_user_table_and_data_upload_table.py  3f534991920f_add_ai_summary_column.py  5e981965335a_create_data_uploads_table.py  5efa879b285c_add_ai_summary_column.py  8298d9e4567c_permission_and_roles_table_creation_and_.py  83d774701b91_add_file_path_to_data_uploads.py  d6d36d9e4b2c_permission_and_roles_table_creation_and_.py  d89791ba31c2_add_file_path_to_data_uploads.py  feef42d5b2a2_add_ai_summary_column.py
backend/app/: main.py
backend/app/api/: deps.py  rate_limit.py
backend/app/api/v1/: api.py  auth.py  health.py  uploads.py  websocket.py
backend/app/core/: cache.py  config.py  logger.py  security.py
backend/app/db/: session.py
backend/app/models/: canvasLayout.py  upload.py  user.py
backend/app/schemas/: upload.py  user.py
backend/app/services/: ai_service.py  analytics_engine.py  interactive_agent.py  llm_service.py  upload_service.py  user_service.py
backend/app/worker/: celery_app.py  task.py
backend/utils/: constants.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: apiClient.ts  authApi.ts  uploadApi.ts  wsClient.ts
frontend/src/components/auth/: Login.tsx  ProtectedRoute.tsx  (+1 more)
frontend/src/store/: authStore.ts  canvasStore.ts  logStore.ts  uiStore.ts
nginx/: example.nginx.conf  nginx.conf
(+9 files in other folders)
